--- a/src/app/components/navigation-header/navigation-header.component.css
+++ b/src/app/components/navigation-header/navigation-header.component.css
@@ -14,5 +14,6 @@
 
 span.tipoLetra{
     
-    font-family: 'Farro', sans-serif;
+    font-family: 'Playfair Display', serif;
+    font-size: large;
 }
