--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <mat-icon>paid</mat-icon>
-      <span class="tipoLetra">First-Train</span>
+      <a href="#"><img class="ml-2" src="../../assets/images/logoprincipal.jpg" width="55px;"></a>
+      <span class="tipoLetra ml-1">First-Train</span>
       <span class="example-spacer"></span>
       
       <ng-container>
