--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,3 +1,9 @@
 <app-navigation-header></app-navigation-header>
-
-<p>Bienvenido a Welcome page</p>
+<div class="contenedorcardwelcome">
+<mat-card class="divfondowelcome text-center w-responsive">
+   <div class="contenedor">
+    <img mat-card-image class="holaimagen" src="../../assets/images/fondogym.jpeg" alt="Photo of a Shiba Inu">
+   
+</div>
+  </mat-card>
+</div>
