--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,5 @@
 <app-navigation-header></app-navigation-header>
+<div class="container-fluid">
 <div class="contenedorcardwelcome">
 
    <div>
@@ -9,7 +10,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-lg-4">
 <mat-card class="example-card text-center">
   <mat-card-header class="text-center">
     <div mat-card-avatar class="example-header-image"></div>
@@ -31,10 +32,11 @@
       </mat-expansion-panel-header>
      
 <table class="text-center">
-
+  <tr>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mañanas</td>
+  </tr>
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:00 - 10:00</td>
-    
   </tr>
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:00 - 11:00</td>
@@ -43,6 +45,9 @@
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11:00 - 12:00</td>
     
+  </tr>
+  <tr>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tardes</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;16:00 - 17:00</td>
@@ -77,7 +82,7 @@
 </mat-card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
 <mat-card class="example-card">
   <mat-card-header class="text-center">
     <div mat-card-avatar class="example-header-image text-center"></div>
@@ -96,7 +101,7 @@
         
       </mat-expansion-panel-header>
       <p class="">
-        First Train es un centro de entrenamiento personal de nueva generación, que nace con la misión de 
+        First Train es un centro de entrenamiento personal de nueva generación que nace con la misión de 
         asesorar y ayudar a personas de muy distintos perfiles en la consecución de sus objetivos, ya sean realacionados
         con la salud, el bienestar, el rendimiento deportivo o la imagen corporal.
       </p>
@@ -117,7 +122,7 @@
 </mat-card>
   </div>
 
-<div class="col-md-4">
+<div class="col-lg-4">
 <mat-card class="example-card">
   <mat-card-header class="text-center">
     <div mat-card-avatar class="example-header-image"></div>
@@ -134,4 +139,5 @@
   </mat-card-content>
 </mat-card>
   </div>
+</div>
 </div>
