--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -31,7 +31,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
      
-<table class="text-center">
+<table class="text-center w-responsive justify">
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mañanas</td>
   </tr>
@@ -40,7 +40,6 @@
   </tr>
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:00 - 11:00</td>
-    
   </tr>
   <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11:00 - 12:00</td>
@@ -100,8 +99,8 @@
         </mat-panel-title>
         
       </mat-expansion-panel-header>
-      <p class="">
-        First Train es un centro de entrenamiento personal de nueva generación que nace con la misión de 
+      <p class="w-responsive justify text-center">
+        First Train es un centro de entrenamiento personal de nueva generación, que nace con la misión de 
         asesorar y ayudar a personas de muy distintos perfiles en la consecución de sus objetivos, ya sean realacionados
         con la salud, el bienestar, el rendimiento deportivo o la imagen corporal.
       </p>
@@ -130,14 +129,31 @@
     <mat-card-subtitle>Localízanos y pregunta sin compromiso</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="../../assets/images/contacto.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </mat-card-content>
+  <mat-accordion>
+    
+    <mat-expansion-panel (opened)="panelOpenState = true"
+                         (closed)="panelOpenState = false">
+      <mat-expansion-panel-header>
+        <mat-panel-title class="tipoLetra">
+          ¿Dónde y Cómo Encontrarnos?
+        </mat-panel-title>
+        
+      </mat-expansion-panel-header>
+     
+     <!--Google map-->
+     <div class="map-responsive">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2057.224468194436!2d-4.372466235933006!3d37.326552769751686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d83aa660feaa9%3A0xa675823fa945429d!2sFirst%20Train%20Centro%20de%20Entrenamiento%20Personal!5e0!3m2!1ses!2ses!4v1620501918660!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  <!--Google Maps-->
+
+  <div class="text-center justify mt-3">
+    <p>Teléfono: 608 40 92 79</p>
+    <p>Email: <a href="mailto:repullo38@gmail.com">repullo38@gmail.com</a></p>
+  </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 </mat-card>
   </div>
 </div>
 </div>
+<app-footer></app-footer>
