--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer class="page-footer font-small special-color-dark pt-4 color">
-
+<div class="container">
     <!-- Copyright -->
     <div id="social" class="footer-copyright text-center py-3 mr-3 icono ml-4 ">
          <!-- Facebook -->
@@ -25,7 +25,7 @@
         <a href="#"> www.firsttrain.com</a>
     </div>
     <!-- Copyright -->
-
+  </div>
   </footer>
   <!-- Footer -->
   <script>
