--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -101,7 +101,7 @@
       </mat-expansion-panel-header>
       <p class="w-responsive justify text-center">
         First Train es un centro de entrenamiento personal de nueva generación, que nace con la misión de 
-        asesorar y ayudar a personas de muy distintos perfiles en la consecución de sus objetivos, ya sean realacionados
+        asesorar y ayudar a personas de muy distintos perfiles en la consecución de sus objetivos, ya sean relacionados
         con la salud, el bienestar, el rendimiento deportivo o la imagen corporal.
       </p>
       <p class="">
