--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -1,27 +1,29 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <a href="#"><img class="ml-2" src="../../assets/images/logoprincipal.jpg" width="55px;"></a>
-      <span class="tipoLetra ml-1">First-Train</span>
-      <span class="example-spacer"></span>
-      
-      <ng-container>
-        <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
-          <mat-icon class="colorMenuButton">menu</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item >
-            <mat-icon>account_circle</mat-icon>Modificar mis datos
-          </button>
-          <button mat-menu-item >
-            <mat-icon>not_listed_location</mat-icon>
-            <span>¿Quiénes somos?</span>
-          </button>
-          <button mat-menu-item >
-            <mat-icon>exit_to_app</mat-icon>
-            <span>Cerrar sesión</span>
-          </button>
-        </mat-menu>
-      </ng-container>
-    </mat-toolbar-row>
-  </mat-toolbar>
+
+<nav class="navbar navbar-expand-xl navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+    <span class="navbar-toggler-icon"></span>
+  </button>
   
+  <!-- logo -->
+  <a class="navbar-brand" href="#">
+    <img src="../../assets/images/logoprincipal.jpg" width="70px;"  alt="">
+  </a>
+  
+  <!-- enlaces -->
+  <div class="collapse navbar-collapse ml-1" id="opciones">   
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link tipoLetra" href="#">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link tipoLetra" href="#">Registro</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link tipoLetra" href="#">Foro</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link tipoLetra" href="#">Multimedia</a>
+      </li>            
+    </ul>
+  </div>
+</nav>
