--- a/src/app/components/navigation-header/navigation-header.component.css
+++ b/src/app/components/navigation-header/navigation-header.component.css
@@ -35,3 +35,17 @@ nav{
     font-family: 'Playfair Display', serif;
     font-size: large;
 }
+
+a {
+    text-decoration: none;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+
+a:hover, a:focus {
+    background-size: 100% 2px;
+}
+
