--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-xl navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,7 +10,7 @@
   </a>
   
   <!-- enlaces -->
-  <div class="collapse navbar-collapse ml-1" id="opciones">   
+  <div class="collapse navbar-collapse ml-1 mr-5" id="opciones">   
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link tipoLetra" href="#">Login</a>
@@ -26,6 +26,8 @@
       </li>            
     </ul>
   </div>
+
+  <h6 class="tipoLetra mt-2 pt-1" style="color: #AEAEAE;">First Train, Entrenamiento Personal</h6>
 </nav>
 <!--Script JQuery para cerrar el menú-->
 <script>
