--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
             <i class="fab fa-twitter fa-lg mt-1 fa-2x"><span class="sr-only">tw</span></i>
         </a>
         <!--Instagram-->
-        <a id="" href="#" title='Instagram' class="rrss icono instagram mr-4">
+        <a id="" href="https://www.instagram.com/firsttraincentro/" target="_blank" title='Instagram' class="rrss icono instagram mr-4">
             <i class="fab fa-instagram fa-lg mt-1 fa-2x"><span class="sr-only">ig</span></i>
         </a>
         <!--YouTube-->
