--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -10,7 +10,7 @@
   </a>
   
   <!-- enlaces -->
-  <div class="collapse navbar-collapse ml-1 mr-5" id="opciones">   
+  <div class="collapse navbar-collapse ml-1 mr-3 pl-1" id="opciones">   
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link tipoLetra" href="#">Login</a>
@@ -18,16 +18,12 @@
       <li class="nav-item">
         <a class="nav-link tipoLetra" href="#">Registro</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link tipoLetra" href="#">Foro</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link tipoLetra" href="#">Multimedia</a>
-      </li>            
+               
     </ul>
   </div>
 
-  <h6 class="tipoLetra mt-2 pt-1" style="color: #AEAEAE;">First Train, Entrenamiento Personal</h6>
+  <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train, Entrenamiento Personal</h6>
+
 </nav>
 <!--Script JQuery para cerrar el menú-->
 <script>
