--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -22,7 +22,7 @@
      
     </div>
     <div class="footer-copyright text-center py-3 mr-4 icono ">© 2021 Copyright:
-        <a href="#"> www.firsttrain.com</a>
+        <a href="#" class="webfooter"> www.firsttrain.com</a>
     </div>
     <!-- Copyright -->
   </div>
