--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -16,13 +16,13 @@
         <a class="nav-link tipoLetra" href="#">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link tipoLetra" href="#">Registro</a>
+        <a class="nav-link tipoLetra" href="registro">Registro</a>
       </li>
                
     </ul>
   </div>
 
-  <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train, Entrenamiento Personal</h6>
+  <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</h6>
 
 </nav>
 <!--Script JQuery para cerrar el menú-->
