--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -10,10 +10,10 @@
   </a>
   
   <!-- enlaces -->
-  <div class="collapse navbar-collapse ml-1 mr-3 pl-1" id="opciones">   
+  <div class="collapse navbar-collapse mr-1 " id="opciones">   
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link tipoLetra" href="login">Login</a>
+        <a class="nav-link tipoLetra" href="login">Log-in</a>
       </li>
       <li class="nav-item">
         <a class="nav-link tipoLetra" href="registro">Registro</a>
